--- a/sorry.html
+++ b/sorry.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="img/favicons/favicon.ico" type="image/x-icon"/>
 
 	
-		<link href="/kabk/go-theses-20-kiki-coster/dist/sorry/bundle.2e11fa515a9e70e9b929.css" rel="stylesheet"><script src="/kabk/go-theses-20-kiki-coster/dist/sorry/bundle.2e11fa515a9e70e9b929.js"></script>
+		<link href="dist/sorry/bundle.2e11fa515a9e70e9b929.css" rel="stylesheet"><script src="dist/sorry/bundle.2e11fa515a9e70e9b929.js"></script>
 	
 </head>
 
